# hallmodel-core

./: CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: parity.yml
contract/: Dockerfile  README.md  cases.json  compare.py  generate.R  generate.sh
contract/golden/: adult_female_baseline.json  adult_female_pcarb.json  adult_male_baseline.json  adult_male_deficit.json  adult_male_dt_half.json  adult_male_ei2400.json  adult_male_pal_high.json  adult_multi.json  child_female_730d.json  child_male_365d.json  child_male_5yr.json  child_male_dt_half.json  child_multi.json  energy_exponential.json  energy_linear.json  energy_logarithmic.json  energy_stepwise_l.json  energy_stepwise_r.json
docs/: ATTRIBUTION.md  HOW_TO_CONSUME.md
include/bw/: adult.hpp  child.hpp  energy.hpp
proof/: verify.sh
proof/outputs/: adult_female_baseline.json  adult_female_pcarb.json  adult_male_baseline.json  adult_male_deficit.json  adult_male_dt_half.json  adult_male_ei2400.json  adult_male_pal_high.json  adult_multi.json  child_female_730d.json  child_male_365d.json  child_male_5yr.json  child_male_dt_half.json  child_multi.json  energy_exponential.json  energy_linear.json  energy_logarithmic.json  energy_stepwise_l.json  energy_stepwise_r.json
src/: adult.cpp  child.cpp  energy.cpp
tests/: CMakeLists.txt  parity_runner.cpp
